k8s/prod_base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sfpayroll-deployment
    namespace: default
spec:
    replicas: 2
    selector:
        matchLabels:
            app: sfpayroll-deployment
    template:
        metadata:
            labels:
                app: sfpayroll-deployment
        spec:
            containers:
                - name: sfpayroll
                  image: ahong415/sfpayroll:latest
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 4000
                        protocol: TCP
                - name: redis
                  image: redis
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 6379
                        protocol: TCP
