k8s/prod_base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sfpayroll-service
    namespace: default
spec:
    type: NodePort
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4000
    selector:
        app: sfpayroll-deployment
