k8s/prod_base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sfpayroll-ingress
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: sfpayroll.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sfpayroll-service
                            port:
                                number: 80
